--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ var m3D = function () {
 setTimeout(function() {
 	m3D.init(
 		[ 
-			{ src: '0.jpg',  title: 'jump to random script', color: '#fff' },
+			{ src: '0.jpg', url: '#', title: 'jump to random script', color: '#fff' },
 			{ src: '1.jpg' },
 			{ src: '2.jpg' },
 			{ src: '3.jpg' },
@@ -377,8 +377,10 @@ setTimeout(function() {
 			{ src: '19.jpg' },
 			{ src: '20.jpg' },
 			{ src: '21.jpg' },
-			{ src: '22.jpg' },
-			{ src: '23.jpg', title: 'jump to random script', color: '#fff' }
+      { src: '22.jpg' },
+      { src: '24.jpg' },
+      { src: '25.png' ,url: '#',  title: '大黄图', color: '#fff'},
+			{ src: '23.jpg',url: '#',  title: 'jump to random script', color: '#fff' }
 		]
 	);
 }, 500);
